[project]
name = "reimagined-happiness"
version = "0.1"
description = "null"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Coding4Hours"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Coding4Hours/reimagined-happiness"
Changelog = "https://github.com/Coding4Hours/reimagined-happiness/releases"
Issues = "https://github.com/Coding4Hours/reimagined-happiness/issues"
CI = "https://github.com/Coding4Hours/reimagined-happiness/actions"


[project.optional-dependencies]
test = ["pytest"]
