[project]
name = "My-first-Package"
version = "0.1"
description = "null"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Coding4Hours"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/Coding4Hours/My-first-Package"
Changelog = "https://github.com/Coding4Hours/My-first-Package/releases"
Issues = "https://github.com/Coding4Hours/My-first-Package/issues"
CI = "https://github.com/Coding4Hours/My-first-Package/actions"


[project.optional-dependencies]
test = ["pytest"]
